--- a/2018-RevueDeLitterature/main.tex
+++ b/2018-RevueDeLitterature/main.tex
@@ -330,7 +330,7 @@ The \tabref{mvcMatching} present the matching between the models.
         \cline{2-2}
          & GUI \\
         \hline
-        Controler & Behavior \\
+        Controller & Behavior \\
         \hline
     \end{tabular} %
  %   }
