--- a/2018-RevueDeLitterature/main.tex
+++ b/2018-RevueDeLitterature/main.tex
@@ -535,7 +535,7 @@ We do not have integrated directly the sub-widgets, but it is possible to create
 \label{sec:navigation}
 
 \bvc{explication nav}
-To represent the between to web page.
+To represent the link between two web pages.
 It is possible to use a navigation meta-model.
 This model makes the link between two top-level container of
     an application.
