--- a/myConfig/macros.tex
+++ b/myConfig/macros.tex
@@ -7,9 +7,14 @@
     % \marginpar{\fbox{\bfseries\sffamily#1}}
    }
    \newcommand{\cvsversion}{\emph{\scriptsize$-$Id: macros.tex,v 1.1.1.1 2007/02/28 13:43:36 bergel Exp $-$}}
+   \newcommand{\paragraphDesc}[2]{
+    \textcolor{#1}{#2}
+   }
+   
   }
   {\newcommand{\bnote}[2]{}
    \newcommand{\cvsversion}{}
+   \newcommand{\paragraphDesc}[2]{}
   } 
 
 
@@ -25,6 +30,11 @@
 \newcommand{\md}[1]{\bnote{MD}{#1}}
 \newcommand{\jr}[1]{\bnote{JRe}{#1}}
 \newcommand{\lf}[1]{\bnote{Luc}{#1}}
+\newcommand{\na}[1]{\bnote{Nic}{#1}}
+\newcommand{\an}[1]{\bnote{Anne}{#1}}
+\newcommand{\bv}[1]{\bnote{Benoit}{#1}}
+
+\newcommand{\bvc}[1]{\paragraphDesc{blue}{#1}}
 
 \graphicspath{{figures/}}
 %%% 
@@ -35,7 +45,7 @@
 \newcommand{\tabref}[1]{Table~\ref{tab:#1}}
 \newcommand{\layout}[1]{#1}
 \newcommand{\commented}[1]{}
-\newcommand{\secref}[1]{Section \ref{sec:#1}}
+\newcommand{\secref}[1]{Section~\ref{sec:#1}}
 \newcommand{\seclabel}[1]{\label{sec:#1}}
 
 %\newcommand{\ct}[1]{\textsf{#1}}
@@ -51,11 +61,11 @@
 %\newcommand{\ret}{$\uparrow$\xspace}
 
 \newcommand{\myparagraph}[1]{\noindent\textbf{#1.}}
-\newcommand{\eg}{\emph{e.g.,}\xspace}
-\newcommand{\ie}{\emph{i.e.,}\xspace}
+\newcommand{\eg}{\emph{e.g.}\xspace}
+\newcommand{\ie}{\emph{i.e.}\xspace}
 \newcommand{\etal}{\emph{et al.,}\xspace}
 \newcommand{\ct}[1]{{\textsf{#1}}\xspace}
-
+\newcommand{\etc}[1]{\textit{etc.}}
 
 \newenvironment{code}
     {\begin{alltt}\sffamily}
@@ -72,14 +82,27 @@
    \end{figure}
 }
 
+
 \newcommand{\twocolumnpic}[3]{
-   \begin{figure*}[!ht]
-   \begin{center}
-   \includegraphics[scale=\defaultScale]{#1}
-   \caption{#2}
-   \label{#3}
-   \end{center}
-   \end{figure*}}
+  \begin{figure*}[!ht]
+  \begin{center}
+  \includegraphics[scale=\defaultScale]{#1}
+  \caption{#2}
+  \label{#3}
+  \end{center}
+  \end{figure*}
+}
+
+\newcommand{\picw}[3]{
+  \begin{figure}[h]
+  \begin{center}
+  \includegraphics[width=\columnwidth]{#1}
+  \caption{#2}
+  \label{#3}
+  \end{center}
+  \end{figure}
+}
+
 
 \newcommand{\infe}{$<$}
 \newcommand{\supe}{$\rightarrow$\xspace}
@@ -93,6 +116,3 @@
 \makeatother
 % Now actually use the newly defined style.
 \urlstyle{leo}
-
-
-
